<resources>
    <string name="app_name">Learn Crypto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboard_message">Learn about cryptocurrencies and how it works. \n No login needed, just learn.</string>
    <string name="learn_now">Learn Now</string>
    <string name="more">More</string>
    <string name="crypto_exchange">Crypto Exchange : %1$s\nVolume : %2$s\nBitcoin Dominant Percentage : %3$s\nTotal Cryptocurrencies : %4$s</string>
    <string name="before_you_begin">Before you begin</string>
    <string name="convert_a_to_b">Convert the price of %1$s to %2$s</string>
    <string name="type">Type : %1$s</string>
    <string name="rank">Rank</string>
    <string name="rank_colon">Rank : </string>
    <string name="status_new">New</string>
    <string name="status_not_new">Not New</string>
    <string name="market_overview">Today\'s Stats</string>
    <string name="coin">Coin</string>
    <string name="what_is">Concept of %1$s</string>
    <string name="concept">Concept</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias deserunt eos et impedit iste libero, modi molestias, nostrum numquam odio perferendis possimus, praesentium ullam vel vero. Eius eos in rem?</string>
    <string name="helpfull_definiton">Helpfull Definiton</string>
    <string name="coins">Coins</string>
    <string name="symbol">Symbol : %1$s</string>
    <string name="about">About</string>
    <string name="started_at">Started at :</string>
    <string name="first_data">First data :</string>
    <string name="last_data">Last data :</string>
    <string name="development_status">Development status :</string>
    <string name="hardwallet">Hardware wallet :</string>
    <string name="proof_of_type">Proof of type :</string>
    <string name="organization_nstatus">Organization structure :</string>
    <string name="hash_algorithm">Hash algorithm :</string>
    <string name="whitepaper">White paper :</string>
    <string name="team">Team</string>
    <string name="tags">Tags</string>
    <string name="position">Position : %1$s</string>
    <string name="total_position">Total position : %1$s</string>
    <string name="find_him_her_on">Find him/her on :</string>
    <string name="build_by_anna_karenina_jusuf">Build by Anna Karenina Jusuf\n%1$s</string>
    <string name="find_out_more_about_1_s_on">Find out more about %1$s on :</string>
    <string name="coin_description">%1$s is %2$s</string>
    <string name="top_exchange">Top Exchange</string>
    <string name="volume_24h">Volume 24h</string>
    <string name="fee_type">Fee Type</string>
    <string name="market">Market</string>
    <string name="confidence">Confidence</string>
    <string name="adjusted_rank">Adjusted rank :</string>
    <string name="label_market">Market :</string>
    <string name="label_category">Category :</string>
    <string name="label_fee_type">Fee type :</string>
    <string name="label_outlier">Outlier :</string>
    <string name="label_trust_scone">Trust score :</string>
    <string name="label_volume_24h">Volume 24h :</string>
    <string name="label_price">Price :</string>
    <string name="label_amount_to_convert">Amount to convert :</string>
    <string name="label_converted_price">Converted price :</string>
    <string name="label_base_last_update">%1$s last update :</string>
    <string name="reported_rank">Reported rank :</string>
    <string name="currencies">Currencies :</string>
    <string name="fiats">Fiats :</string>
    <string name="adjusted_volume_24h">Adjusted volume 24h :</string>
    <string name="reported_volume_24h">Reported volume 24h :</string>
    <string name="updated">Last updated :</string>
    <string name="confidence_score">Confidence score :</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="active">Active</string>
    <string name="not_active">Not Active</string>
    <string name="open_source">Open Source</string>
    <string name="not_open_source">Private Source</string>
    <string name="trust_score">Trust Score</string>
    <string name="exchange">Exchange</string>
    <string name="price">Price</string>
    <string name="market_list">Bitcoin Market</string>
    <string name="BUTTON_CANCEL">Cancel</string>
    <string name="BUTTON_RETRY">Retry</string>
    <string name="BUTTON_OK">OK</string>
    <string name="report_error">Report error?</string>
    <string name="desc_not_found">Description not found</string>
    <string name="not_found">Not found</string>
    <string name="dialog_no_internet_title">Oops, No internet connection</string>
    <string name="dialog_no_internet_message">Don\'t worry you can comeback anytime</string>
    <string name="dialog_default_title">Hhmm..something went wrong\n</string>
    <string name="dialog_default_message">While we are fixing the issue, you still can enjoy the other feature!</string>
    <string name="dialog_404_message">Data not found</string>
    <string name="dialog_400_message">Invalid request</string>
    <string name="dialog_1404_message">Data is empty</string>
    <string name="dialog_429_message">We have encounter too many request, try again later!</string>
    <string name="id_exchange">exchange</string>
    <string name="id_bitcoin">btc-bitcoin</string>
    <string name="id_eth">eth-ethereum</string>
    <string name="id_usdt">usdt-tether</string>
    <string name="id_cryptocurrency">cryptocurrency</string>
    <string name="menu_concept">Concept</string>
    <string name="menu_number_01">01</string>
    <string name="menu_exchanges">Exchanges</string>
    <string name="menu_number_02">02</string>
    <string name="menu_market">Market</string>
    <string name="menu_number_03">03</string>
    <string name="menu_coins">Coins</string>
    <string name="menu_price_converter">Price Converter</string>
    <string name="menu_number_04">04</string>
    <string name="ethereum_market">Ethereum Market</string>
    <string name="tether_market">Tether Market</string>
    <string name="search_default">Search anything like coins, people, exchanges and more</string>
    <string name="search_notfound">Sorry, we can\'t find it! Try another keyword</string>
    <string name="dash">-</string>
    <string name="dollar">$%1$s</string>
    <string name="dialog_input_invalid">Input not valid</string>
    <string name="dialog_message_invalid">Please enter valid number. ex : 1 or 5</string>
    <string name="label_topics">Topics</string>
    <string name="label_market_capitalization">Market capitalization :</string>
    <string name="label_market_capitalization_all_time_high">Market capitalization all time high :</string>
    <string name="label_difference_from_all_time_high">Difference from all time high :</string>
    <string name="label_bitcoin_dominance_percentage">Bitcoin dominance percentage :</string>
    <string name="label_total_cyrptocurrencies">Total Cryptocurrencies : </string>

</resources>