<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_16"
    android:scrollbars="none"
    tools:context=".features.ui.detail.CoinDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewCoinName"
            style="@style/title24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Bitcoin" />

        <include
            android:id="@+id/indicatorActive"
            layout="@layout/item_indicator_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            app:layout_constraintBottom_toBottomOf="@+id/textViewCoinName"
            app:layout_constraintStart_toEndOf="@+id/textViewCoinName" />

        <include
            android:id="@+id/indicatorNew"
            layout="@layout/item_indicator_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            app:layout_constraintBottom_toBottomOf="@+id/indicatorActive"
            app:layout_constraintStart_toEndOf="@+id/indicatorActive" />

        <include
            android:id="@+id/indicatorOpenSource"
            layout="@layout/item_indicator_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            app:layout_constraintBottom_toBottomOf="@+id/indicatorNew"
            app:layout_constraintStart_toEndOf="@+id/indicatorNew" />

        <TextView
            android:id="@+id/textViewSymbol"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:text="@string/symbol"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewCoinName" />

        <TextView
            android:id="@+id/textViewType"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4"
            android:text="@string/type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewSymbol" />

        <TextView
            android:id="@+id/textViewAbout"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:text="@string/about"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewType" />

        <TextView
            android:id="@+id/textViewAboutCoin"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewAbout"
            tools:text="@string/lorem" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:stretchColumns="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewAboutCoin">

            <TableRow>

                <TextView android:text="@string/started_at" />

                <TextView
                    android:id="@+id/textViewStarted"
                    tools:text="@string/started_at" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/dimen_8">

                <TextView android:text="@string/first_data" />

                <TextView
                    android:id="@+id/textViewFirstData"
                    tools:text="@string/started_at" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/dimen_8">

                <TextView android:text="@string/last_data" />

                <TextView
                    android:id="@+id/textViewLastData"
                    tools:text="@string/started_at" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/dimen_8">

                <TextView android:text="@string/development_status" />

                <TextView
                    android:id="@+id/textViewDevStats"
                    tools:text="@string/started_at" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/dimen_8">

                <TextView android:text="@string/hardwallet" />

                <TextView
                    android:id="@+id/textViewHardWallet"
                    tools:text="@string/started_at" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/dimen_8">

                <TextView android:text="@string/proof_of_type" />

                <TextView
                    android:id="@+id/textViewProofType"
                    tools:text="@string/started_at" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/dimen_8">

                <TextView android:text="@string/organization_nstatus" />

                <TextView
                    android:id="@+id/textViewOrganizationStatus"
                    tools:text="@string/started_at" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/dimen_8">

                <TextView android:text="@string/hash_algorithm" />

                <TextView
                    android:id="@+id/textViewHasiAlgo"
                    tools:text="@string/started_at" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/textViewWhitePaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:text="@string/whitepaper"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tableLayout" />

        <ImageView
            android:id="@+id/imageViewWhitePaper"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/dimen_8"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewWhitePaper"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textViewWhitePaperSrc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Whitaepaper.pdf"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dimen_4"
            app:layout_constraintTop_toBottomOf="@id/imageViewWhitePaper"/>

        <TextView
            android:id="@+id/textViewTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewWhitePaperSrc"
            android:layout_marginTop="@dimen/dimen_24"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recylerViewTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_team_layout"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen_8"
            app:layout_constraintTop_toBottomOf="@id/textViewTeam"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textViewTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recylerViewTeam"
            android:layout_marginTop="@dimen/dimen_24"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recylerViewTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_tags"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="2"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dimen_8"
            app:layout_constraintTop_toBottomOf="@id/textViewTags"/>

        <ProgressBar
            android:id="@+id/progressBarDetail"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/primary"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>